# cos1e300

./: main.cpp
way1/: CMakeLists.txt
way2/: CMakeLists.txt  main.cpp
